@@ -4,6 +4,8 @@ Alpha 4.2
 - The crafting management screen also allows you to set a priority on each crafting recipe of disabled, low, normal or high
 - The crafting management screen also allows you to select a material to be used for each recipe input item
 - Constructions now properly track and respect material selections by the player
+- Added an option to the build menu to cancel pending constructions over a selected area
+- Added an option to the build menu to deconstruct furniture, doors, bridges and walls over a selected area
 - Added tooltips to liquid container inventory descriptions
 - Updated assets for constructed walls
 - Added a placeholder sprite to be used if any sprites are missing
